Refactor PdfTextExtractor for readability
公开 API 与异常消息不变；测试全过（13/13）。具体改动：

- extract() 拆成线性三步：校验 → load → 返回 (pageCount,
  extractPageTexts, extractBookmarks)，页文本循环挪进新 helper
- textForPageRange 不再每次循环 sb.toString().endsWith()，直接看
  pageText 的尾字符
- resolvePage → resolveBookmarkPage：用 pattern-matching instanceof
  把"三分支 + 死代码 fallthrough"压成两条线性路径（destination 为主，
  action 兜底），页码计算抽出 pageIndex1Based helper
- walk → flattenOutline：for-loop 形式让"siblings 平移 + children
  递归"的意图更显眼
- 所有私有 helper 标 static（类本身无实例状态）
- Collections.emptyList() → List.of()，移除冗余 import

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>